kubernetes-deploy/cluster-bundle/manifests-local-openvre/manifest/ingress-dashboard-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-frontend
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-frontend
            port:
              number: 80
